# fine_tuning_code_llama

./: .gitignore  main.py  pyproject.toml
fine-tuning_code/: lora_fine_tuning.py
