[project]
name = "qa-pair-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.86.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.8.0",
    "ollama>=0.6.1",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "trl>=0.29.1",
    "unsloth>=2025.7.2",
]
